<resources>
    <string name="app_name_debug">直达-测试版</string>
    <string name="app_name_release">直达</string>
    <string name="package_name_debug">luyao.direct.debug</string>
    <string name="package_name_release">luyao.direct</string>
    <string name="google">谷歌</string>
    <string name="bing">Bing</string>
    <string name="zhihu">知乎</string>
    <string name="bytedance">头条</string>
    <string name="baidu">百度</string>
    <string name="sougou">搜狗</string>
    <string name="channel_name">Everywhere</string>
    <string name="channel_description">Every Description</string>
    <string name="normal">常规</string>
    <string name="about">关于</string>
    <string name="developer">开发者</string>
    <string name="other">其它</string>
    <string name="setting">设置</string>
    <string name="default_engine">默认搜索引擎</string>
    <string name="search_engine">搜索引擎</string>
    <string name="search_system_app">系统应用</string>
    <string name="search_system_app_summary">是否展示系统应用</string>
    <string name="search_app_summary">是否在检索结果中展示本机已安装应用</string>
    <string name="search_package_name">按包名查找</string>
    <string name="search_package_name_summary">开启后可以使用包名检索应用</string>
    <string name="more_app_info">应用基本信息</string>
    <string name="more_app_info_summary">列表中展示包名，版本号等基本信息</string>
    <string name="app_detail_info">应用详细信息</string>
    <string name="app_detail_info_summary">长按跳转应用详情页</string>
    <string name="slogan">用直达，去哪儿都能快一点！</string>
    <string name="open_licenses">开源许可</string>
    <string name="search_contacts">联系人</string>
    <string name="search_contacts_summary">是否在检索结果中展示联系人</string>
    <string name="call_permission_note">没有你的允许，无法拨打电话</string>
    <string name="never_ask_note">被你拒绝太多次，只能到设置页面开启~</string>
    <string name="read_contacts_note">没有你的允许，无法读取联系人</string>
    <string name="backup_apk_note">没有你的允许，无法备份安装包</string>
    <string name="write_backup_note">没有文件权限，无法备份数据</string>
    <string name="permission_again">再次申请</string>
    <string name="go_to_setting">前去设置</string>
    <string name="suan_le">算了</string>
    <string name="permission_no_need">我不需要</string>
    <string name="send_sms_note">没有你的允许，无法发送短信</string>
    <string name="secret_check">已阅读并同意隐私政策和用户协议</string>
    <string name="first_slide_title">直达可以做什么？</string>
    <string name="first_slide_desc">来瞅瞅！</string>
    <string name="secret_license">隐私政策</string>
    <string name="user_license">用户协议</string>
    <string name="first_loading_note">首次使用，数据加载中，请稍后…</string>
    <string name="please_read_first">请先阅读并同意隐私政策和用户协议</string>
    <string name="two_slide_note">快速搜索应用，直接打开！</string>
    <string name="three_slide_note">输入关键字，想去哪搜去哪搜 ！</string>
    <string name="four_slide_note">快速搜索联系人，给她打个电话，发个短信！</string>
    <string name="four_slide_permission">当然，需要您给予权限 ↓</string>
    <string name="last_slide_note">更多功能，等你探索…</string>
    <string name="come_on">来吧 !</string>
    <string name="Email">邮箱</string>
    <string name="Search">搜索</string>
    <string name="click_to_search">点我直达</string>
    <string name="notification_bar">通知栏启动</string>
    <string name="notification_bar_summary">是否在通知栏显示默认快捷入口</string>
    <string name="Bilibili">Bilibili</string>
    <string name="Taobao">淘宝</string>
    <string name="Pdd">拼多多</string>
    <string name="gaode">高德</string>
    <string name="Weibo">微博</string>
    <string name="launch_fail">启动失败</string>
    <string name="baidu_baike">百度百科</string>
    <string name="open_default_search_engine">调起默认搜索引擎</string>
    <string name="open_search_first_result">调起搜索结果第一项</string>
    <string name="open_search_first_result_if_no">搜索结果无内容时调起默认搜索引擎</string>
    <string name="recent_use">最近使用</string>
    <string name="History">历史</string>
    <string name="star_use">星标</string>
    <string name="search_by">使用 %s 搜索</string>
    <string name="update_faile">更新失败</string>
    <string name="find_update">发现新版本</string>
    <string name="ignore_this_update">忽略此版本</string>
    <string name="update">升级</string>
    <string name="Cancel">取消</string>
    <string name="check_update">检测升级</string>
    <string name="quick">快捷</string>
    <string name="notification">通知</string>
    <string name="notification_star_summary">是否在通知栏显示星标</string>
    <string name="notification_recent_summary">是否在通知栏显示最近使用</string>
    <string name="clear_search_content">保留搜索内容</string>
    <string name="whether_to_clear_search_input">进入搜索页时，是否自动填充上次搜索内容</string>
    <string name="backup_title">备份和恢复</string>
    <string name="webdav">WebDav</string>
    <string name="connect_status">点击连接 WebDav 服务器</string>
    <string name="Local">本地</string>
    <string name="note">提示</string>
    <string name="backup_to_cloud">备份到云端</string>
    <string name="restore_from_cloud">从云端恢复</string>
    <string name="backup_to_local">备份到本地</string>
    <string name="restore_from_local">从本地恢复</string>
    <string name="backup_note">联系人信息不会被备份</string>
    <string name="connected">已连接</string>
    <string name="webdav_server">服务器地址</string>
    <string name="username">用户名</string>
    <string name="app_password">应用密码</string>
    <string name="help">帮助</string>
    <string name="Confirm">确认</string>
    <string name="Confirm_delete">是否确认删除？</string>
    <string name="Remove">清除</string>
    <string name="Test">测试</string>
    <string name="Connect">连接</string>
    <string name="backingup_to_cloud">正在备份到云端</string>
    <string name="please_config_webdav">请先配置 WebDav 域名，用户名和应用密码</string>
    <string name="go_to_config">去配置</string>
    <string name="last_backup_time">上次备份于 %s</string>
    <string name="restore_note">是否恢复您于 %s 上传的直达 V%s 版本的备份数据？</string>
    <string name="please_select_local_backup_file">请选择 Download/Direct 目录下的 local_backup.direct 文件</string>
    <string name="input_webdav_server">请输入服务器地址</string>
    <string name="input_webdav_username">请输入用户名</string>
    <string name="input_webdav_password">请输入应用密码</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_faile">连接失败，请检查配置</string>
    <string name="backup_save_note">备份文件将保存到 Download/Direct 目录下</string>
    <string name="backing_up_to_cloud">正在备份到云端</string>
    <string name="backup_success">备份成功</string>
    <string name="backup_failed">备份失败</string>
    <string name="reading_cloud_backup_data">正在读取云端备份数据</string>
    <string name="restore_failed">还原失败</string>
    <string name="restore_success">还原成功</string>
    <string name="reading_local_backup_data">正在读取本地备份数据</string>
    <string name="backing_to_local">正在备份到本地</string>
    <string name="restoring_cloud_backup_data">正在还原云端备份数据</string>
    <string name="default_open_browser">默认浏览器</string>
    <string name="Browser">浏览器</string>
    <string name="open_chrome_custom_tab">尝试调起 Chrome Custom Tab 以优化浏览体验</string>
    <string name="search_engine_summary">调整输入法上方工具栏</string>
    <string name="search_result">搜索结果</string>
    <string name="current_span_count">单行图标数 (当前: %d)</string>
    <string name="Icon">图标</string>
    <string name="name">名称</string>
    <string name="Url">Url</string>
    <string name="url_scheme">Scheme</string>
    <string name="Delete">删除</string>
    <string name="use_app_search_first">请注意，Scheme 的优先级高于 Url </string>
    <string name="Add">添加</string>
    <string name="custom_add">手动添加</string>
    <string name="Select">选取</string>
    <string name="have_a_search">搜一搜吧</string>
    <string name="need_show_in_panel">是否显示到面板</string>
    <string name="search_tag">搜索标签</string>
    <string name="geek_setting">个性化</string>
    <string name="normal_no_use">一般人可能用不到</string>
    <string name="remove_recent_task">在后台任务栏中不显示直达</string>
    <string name="traceless_use">无痕使用</string>
    <string name="do_nothing">啥都不干</string>
    <string name="special_search">特殊搜索项</string>
    <string name="search_by_pinyin">支持拼音搜索</string>
    <string name="View">视图</string>
    <string name="global_icon_pack">全局图标包</string>
    <string name="launch_mode">启动方式</string>
    <string name="content_on_home_page">首页内容顺序</string>
    <string name="quick_start">快捷启动</string>
    <string name="assist_summary">如果系统支持，可以长按 Home 键启动</string>
    <string name="assist_title">设置为数字助理</string>
    <string name="side_bar">悬浮窗</string>
    <string name="side_bar_summary">点击悬浮侧边栏启动直达</string>
    <string name="sidebar_location">悬浮窗位置</string>
    <string name="sidebar_shape">悬浮窗形状</string>
    <string name="right">右</string>
    <string name="left">左</string>
    <string name="shape_line">条形</string>
    <string name="shape_cicle">圆形</string>
    <string name="float_window_color">悬浮窗颜色</string>
    <string name="search_switch">搜索开关</string>
    <string name="app_shortcut">快捷方式</string>
    <string name="search_app_direct_summary">是否搜索应用快捷方式</string>
    <string name="choose_image">选择图片</string>
    <string name="choose_app_icon">选择应用图标</string>
    <string name="search_app">搜索应用</string>
    <string name="test">测试</string>
    <string name="licence_content"><![CDATA[
    <b>欢迎来到直达！</b> 为了更好的保护您的权益，我们将尽可能少的收集您的个人信息。您可以通过 <a href="https://www.yuque.com/bingxinshuotm/fkhvug/qq1vzv">用户协议</a> 和 <a href="https://www.yuque.com/bingxinshuotm/fkhvug/gyo3m0">隐私政策</a> 详细了解我们如何收集、存储和处理个人信息。]]></string>
    <string name="license_title">个人信息保护指引</string>
    <string name="agree">同意</string>
    <string name="disagress">不同意</string>
    <string name="feedback">意见反馈</string>
    <string name="system_not_support">系统不支持</string>
    <string name="manager_search_engine">搜索引擎管理</string>
    <string name="manager_search_engine_note">编辑/删除请点击，排序请长按拖拽</string>
    <string name="manage_star_note">删除请点击，排序请长按拖拽</string>
    <string name="manage_star">星标项管理</string>
    <string name="manage_direct">快捷方式管理</string>
    <string name="visit_url">访问 %s</string>
    <string name="search_paste">搜索 %s</string>
    <string name="send_email">发送到 %s</string>
    <string name="default_show_keyboard">进入首页是否默认弹出软键盘</string>
    <string name="look">查看</string>
    <string name="auto_close_note">跳转到其他应用时自动关闭直达</string>
    <string name="pinyin_setting_note">开启后可以使用拼音搜索(支持首字母)</string>
    <string name="auto_show_engine">自动显示搜索引擎</string>
    <string name="auto_show_engine_note">在搜索框输入文字时，显示可用搜索引擎</string>
    <string name="history_record">历史记录</string>
    <string name="clear_history_record">清空历史搜索记录</string>
    <string name="clear_recent_record">清空最近使用记录</string>
    <string name="whether_save_history">是否保存历史搜索记录</string>
    <string name="clear_history_note">是否确定清空所有历史搜索记录？</string>
    <string name="clear_recent_note">是否确定清空所有最近使用记录？</string>
    <string name="show_clipboard_content">展示剪切板内容</string>
    <string name="ims_search_option">输入法搜索键选项</string>
    <string name="input_association">输入联想</string>
    <string name="keyword_association">关键字联想</string>
    <string name="keyword_association_note">开启后，将对输入关键字进行联想提示</string>
    <string name="association_engine">联想引擎</string>
    <string name="only_association">仅联想</string>
    <string name="only_association_note">开启输入联想后，将不再搜索其他任何内容</string>
    <string name="specify_app">指定应用</string>
    <string name="direct_name_required">快捷方式名称，必填</string>
    <string name="click_to_choose_app">点击选择应用</string>
    <string name="shortcut_scheme">快捷方式 Scheme</string>
    <string name="direct_need_root_note">此快捷方式需要 Root 权限才可以启动！</string>
    <string name="exec_by_root">使用 Root 启动</string>
    <string name="sidebar_switch">悬浮窗开关</string>
    <string name="float_window_size">悬浮窗大小</string>
    <string name="gesture">手势</string>
    <string name="gesture_vibrate">震动反馈</string>
    <string name="slide_up">上滑</string>
    <string name="slide_down">下滑</string>
    <string name="slide_left">左滑</string>
    <string name="slide_right">右滑</string>
    <string name="float_window_icon">悬浮窗图标</string>
    <string name="float_window_note">点击快速打开直达。\n长按拖拽悬浮窗。\n若悬浮窗为条形，无法自定义图标。</string>
    <string name="auto_copy_when_search">搜索时自动复制搜索内容</string>
    <string name="default_selection_last_search">默认选中保留的搜索内容</string>
    <string name="default_selection_last_search_note">选中搜索内容，方便快速编辑</string>
</resources>