<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_bg"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="28dp"
    android:paddingEnd="20dp"
    android:paddingBottom="28dp">

    <TextView
        android:id="@+id/rootNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/direct_need_root_note"
        android:textColor="@color/red"
        android:textSize="14dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Icon"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/directIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/luyao" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/name"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp" />


    <luyao.ktx.view.ClearEditText
        android:id="@+id/directName"
        style="@style/Input_Et"
        android:hint="@string/direct_name_required" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/specify_app"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/directApp"
        style="@style/Input_Et"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/click_to_choose_app" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/url_scheme"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp" />


    <luyao.ktx.view.ClearEditText
        android:id="@+id/directScheme"
        style="@style/Input_Et"
        android:hint="@string/shortcut_scheme" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exec_by_root"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/rootSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/directDelete"
            style="@style/Engine_Edit_Menu_Bt"
            android:text="@string/Delete"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/directTest"
            style="@style/Engine_Edit_Menu_Bt"
            android:text="@string/test" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/directConfirm"
                style="@style/Engine_Edit_Menu_Bt"
                android:text="@string/Confirm" />

            <ProgressBar
                android:id="@+id/directProgress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
